static/psi4manual/1.2.1/_sources/autodoc_testsuite_dftd3.rst.txt

.. _`apdx:testSuitedftd3`:

=============================================
DFTD3
=============================================

=============================================   ============
Input File                                      Description 
=============================================   ============
:srcsample:`dftd3/psithon2`                     Accesses basis sets, databases, plugins, and executables in non-install locations
:srcsample:`dftd3/dft-bench-interaction`        functionals + DFTD3 interaction energies vs. other programs
:srcsample:`dftd3/dft-bench-ionization`         functionals + DFTD3 ionization energies vs. other programs
:srcsample:`dftd3/version`                      Exercises the various DFT-D corrections, both through python directly and through c++
:srcsample:`dftd3/grad`                         DF-BP86-D2 cc-pVDZ frozen core gradient of S22 HCN, calling Grimme's dftd3 program for -D2 gradients
:srcsample:`dftd3/energy`                       Exercises the various DFT-D corrections, both through python directly and through c++
=============================================   ============

