static/psi4manual/1.4.0/_sources/autodoc_testsuite_dftd3.rst.txt

.. _`apdx:testSuitedftd3`:

=======================================================
DFTD3
=======================================================

=======================================================   ============
Input File                                                Description 
=======================================================   ============
:srcsample:`dftd3/grad`                                   DF-BP86-D2 cc-pVDZ frozen core gradient of S22 HCN, calling Grimme's dftd3 program for -D2 gradients update reference for new BraggSlater radii
:srcsample:`dftd3/energy`                                 Exercises the various DFT-D corrections, both through python directly and through c++
:srcsample:`dftd3/version`                                Exercises the various DFT-D corrections, both through python directly and through c++ all dft values updated to new BraggSlater radii
:srcsample:`dftd3/nbody-cp-gradient`                      Computation of CP-corrected water trimer gradient (geometry from J. Chem. Theory Comput. 11, 2126-2136 (2015))
:srcsample:`dftd3/psithon2`                               Accesses basis sets, databases, plugins, and executables in non-install locations
=======================================================   ============

